fixxed textarea with remote clear / overlap-identity in cm-header added for better back control

--- a/app/less/drtv-header.less
+++ b/app/less/drtv-header.less
@@ -31,12 +31,12 @@ cm-header{
     }
     span {
       position: relative;
-      font-size:0.8em;
+      font-size:@cm-small-font;
     }
-    &.overblend-avatar{
+    &.overlap-identity{
       .back-wrap{
         position:relative;
-        width:3em;
+        width:@cm-unit;
       }
     }
   }
